XMLExper/m12/m12_493_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘virtual bool tinyxml2::XMLElement::ShallowEqual(const tinyxml2::XMLNode*) const’:
tinyxml2.cpp:2134:55: error: cannot dynamic_cast ‘other’ (of type ‘const class tinyxml2::XMLElement*’) to type ‘class tinyxml2::XMLNode*’ (conversion casts away constness)
 2134 |     if ( /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(other) && XMLUtil::StringEqual( other->Name(), Name() )) {
      |                                                       ^
diff: tinyxml2.S: No such file or directory
